samples/_failures_safe/1761796059_ac8ce4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90a0fa93.c: In function ‘main’:
./samples/SAFE/__tmp_90a0fa93.c:144:9: error: expected declaration or statement at end of input
  144 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_90a0fa93.c:144:9: error: expected declaration or statement at end of input
